<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_perf</name>
  <version>0.0.1</version>
  <description>
    A small ROS 2 throughput / latency benchmarking tool that mimics
    the cyclonedds ddsperf command-line interface.
  </description>
  <maintainer email="lishuying.top@gmail.com">The ros2_perf maintainer</maintainer>
  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/Libunko/ros2_perf</url>
  <url type="bugtracker">https://github.com/Libunko/ros2_perf/issues</url>
  <author email="lishuying.top@gmail.com">The ros2_perf Authors</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
